Feat: Configuracion Final de flights y fix: detalles en la estructura
